# sym_gpt

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yaml
chat/: Cargo.toml
chat/src/: lib.rs
sym/: Cargo.toml  build.rs
sym/src/: main.rs
