[package]
name = "chat"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = ""

[dependencies]
cliclack = "0.3.5"
futures-util = "0.3.31"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
url = { version = "2.5.4", features = ["serde"] }
encrypt_config = { version = "1.0.9", features = [
    "derive",
    "persist",
    "default_config_dir",
] }
